Fixed seach bar spacing

--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,7 @@ input[type="checkbox"] {
     justify-content: center;
     padding-top: 25px;
     gap: 10px;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
 }
 
 #search {
@@ -150,6 +150,7 @@ input[type="checkbox"] {
     justify-content: center;
     gap: 30px;
     padding: 30px;
+    padding-top: 40px;
     margin: 0;
     list-style: none;
 }
